# AwakinoUSTCscan

./: .env  .gitignore  .gitmodules  README.md  config.ini  pyproject.toml
PythonScripts/: C_ScanViewer.py  EchoModel.py  main.py  single_wave_viewer.py  transformer_seq_gen_test.py  手动拟合工具_tk.py
PythonScripts/NetTOF/: LSTM.py  __init__.py  check_dataset.py  dataset.py  main.py  test.py  train.py  trainer.py
PythonScripts/NetTOF/strategies/: __init__.py  base_strategy.py  regression_strategy.py
PythonScripts/rebuild/: dataset.py  trainer.py
PythonScripts/rebuild/defect_types/: __init__.py  _clamped_value.py  base_type.py  circle_type.py
PythonScripts/rebuild/strategies/: __init__.py  base_strategy.py  unet_strategy.py
PythonScripts/tests/: test_rebuild_dataset.py  test_unet_training.py
PythonScripts/utils/: __init__.py  file_io.py  format_exchange.py
doc/: NetTOF_overview.md  回波公式.md  目的.md
